# toggy

./: Cargo.toml  README.md  toggy.ini
src/: config.rs  game.rs  lib.rs  module.rs  utils.rs
