[package]
name = "toggy"
version = "0.1.0"
authors = ["Xiangmin Wang <wang@xiangmin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cdylib -> https://doc.rust-lang.org/nightly/edition-guide/rust-2018/platform-and-target-support/cdylib-crates-for-c-interoperability.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = [ "winuser", "minwindef", "impl-default", "psapi", "processthreadsapi", "handleapi", "synchapi" ] }
chrono = "0.4"
rust-ini = "0.17.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
